--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ numpy>=1.24.0
 plotly>=5.15.0
 openpyxl>=3.1.0
 python-dotenv>=1.0.0
+PyPDF2>=3.0.0
+Pillow>=10.0.0
+pytesseract>=0.3.10
+pdf2image>=1.16.3
